--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vercel/kv": "^1.0.1",
     "buffer": "^6.0.3",
     "ethers": "^6.11.0",
+    "frames.js": "^0.14.0",
     "next": "^14.1.4",
     "node-fetch": "^3.3.2",
     "puppeteer": "^22.6.0",
